--- a/VagaFlixApp_v4/Platforms/Android/AndroidManifest.xml
+++ b/VagaFlixApp_v4/Platforms/Android/AndroidManifest.xml
@@ -3,4 +3,5 @@
 	<application android:allowBackup="true" android:supportsRtl="true" android:label="VagaFlix" android:icon="@mipmap/appicon"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
 </manifest>
